apps/commafeed/base/deployment.yaml
# base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commafeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commafeed
  template:
    metadata:
      labels:
        app: commafeed
    spec:
      containers:
        - name: commafeed
          image: athou/commafeed:latest-postgresql
          ports:
            - containerPort: 8082
