apps/commafeed/base/service.yaml
# base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commafeed
spec:
  selector:
    app: commafeed
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
