apps/commafeed/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voxora-ingress
  namespace: voxora-app-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    # Overrides the IP that external-dns will publish
    external-dns.alpha.kubernetes.io/target: "90.129.244.3"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - commafeed.lab.aminrj.com
      secretName: commafeed-tls
  rules:
    - host: commafeed-qa.lab.aminrj.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voxora-service
                port:
                  number: 80
